--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "format": "prettier --write \"(src|test)/**/*.ts\"",
     "lint": "tslint -p tsconfig.json --fix",
     "doc": "typedoc --excludeExternals --excludePrivate --out docs ./src/**",
-    "publish:npm": "npm run clean && npm run build && npm publish && npm run clean"
+    "publish:npm": "npm run clean && npm run build && npm publish && npm run clean",
+    "start": "node start.js"
   },
   "license": "MIT",
   "devDependencies": {
@@ -68,6 +69,7 @@
     "crypto-js": "^4.2.0",
     "ethereum-cryptography": "0.1.3",
     "ethers": "5.5.4",
+    "express": "^4.21.0",
     "lodash": "^4.17.21",
     "qs": "^6.11.1",
     "viem": "^2.21.22",
