Ensure tsconfig.json excludes mocha

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,7 @@
     "sourceMap": false,
     "resolveJsonModule": true,
     "types": [
-      "node",
-      "mocha"
+      "node"
     ],
     "baseUrl": "./",
     "paths": {
