--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "lib/index.js",
   "module": "lib/index.js",
   "types": "lib/index.d.ts",
+  "type": "module",
   "files": [
     "lib"
   ],
@@ -27,9 +28,30 @@
     "lint": "tslint -p tsconfig.json --fix",
     "doc": "typedoc --excludeExternals --excludePrivate --out docs ./src/**",
     "publish:npm": "npm run clean && npm run build && npm publish && npm run clean",
-    "start": "node start.js"
+    "start": "node app.js"
   },
   "license": "MIT",
+  "engines": {
+    "node": ">=10"
+  },
+  "dependencies": {
+    "axios": "^1.6.7",
+    "big.js": "^6.2.1",
+    "bigint-buffer": "^1.1.5",
+    "bignumber.js": "^9.0.1",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
+    "crypto-js": "^4.2.0",
+    "dotenv": "^16.4.5",
+    "es6-promisify": "^7.0.0",
+    "ethereum-cryptography": "0.1.3",
+    "ethers": "5.5.4",
+    "express": "^4.21.0",
+    "lodash": "^4.17.21",
+    "qs": "^6.11.1",
+    "viem": "^2.21.22",
+    "web3": "1.7.4"
+  },
   "devDependencies": {
     "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.15.8",
@@ -54,26 +76,6 @@
     "typescript": "5.5.2",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
-  },
-  "engines": {
-    "node": ">=10"
-  },
-  "dependencies": {
-    "es6-promisify": "^7.0.0",
-    "axios": "^1.6.7",
-    "big.js": "^6.2.1",
-    "bigint-buffer": "^1.1.5",
-    "bignumber.js": "^9.0.1",
-    "crypto": "^1.0.1",
-    "crypto-browserify": "^3.12.0",
-    "crypto-js": "^4.2.0",
-    "ethereum-cryptography": "0.1.3",
-    "ethers": "5.5.4",
-    "express": "^4.21.0",
-    "lodash": "^4.17.21",
-    "qs": "^6.11.1",
-    "viem": "^2.21.22",
-    "web3": "1.7.4"
   },
   "mocha": {
     "timeout": 120000,
